crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__custom_dir-2.snap
---
source: crates/compiler/tests/parser_test/mod.rs
expression: "<p v-test.add=\"tt\"/>"

---
Dir:
  name: test
  argument: ~
  modifiers:
    - add
  expression:
    content: tt
    location:
      start: "Pos: 14, Ln: 1, Col: 15"
      end: "Pos: 18, Ln: 1, Col: 19"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 13, Ln: 1, Col: 14"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 18, Ln: 1, Col: 19"

