crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir_parse_error-3.snap
---
source: crates/compiler/tests/parser_test/mod.rs
expression: "<p v-.=\"tt\"/>"

---
Attr:
  name: v-.
  value:
    content: tt
    location:
      start: "Pos: 7, Ln: 1, Col: 8"
      end: "Pos: 11, Ln: 1, Col: 12"
  name_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 6, Ln: 1, Col: 7"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 11, Ln: 1, Col: 12"

