crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__dir_parse_error-4.snap
---
source: crates/compiler/tests/parser_test/mod.rs
expression: "<p v-a:.=\"tt\"/>"

---
Dir:
  name: a
  argument: ~
  modifiers:
    - ""
  expression:
    content: tt
    location:
      start: "Pos: 9, Ln: 1, Col: 10"
      end: "Pos: 13, Ln: 1, Col: 14"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 8, Ln: 1, Col: 9"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 13, Ln: 1, Col: 14"

