crates/compiler/tests/parser_test/snapshots/integration_test__parser_test__on_dir-2.snap
---
source: crates/compiler/tests/parser_test/mod.rs
expression: "<p @::=\"tt\"/>"

---
Dir:
  name: "on"
  argument:
    Static: "::"
  modifiers: []
  expression:
    content: tt
    location:
      start: "Pos: 7, Ln: 1, Col: 8"
      end: "Pos: 11, Ln: 1, Col: 12"
  head_loc:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 6, Ln: 1, Col: 7"
  location:
    start: "Pos: 3, Ln: 1, Col: 4"
    end: "Pos: 11, Ln: 1, Col: 12"

